Fixed text alignment in alerts

--- a/css/partials/_molecules.scss
+++ b/css/partials/_molecules.scss
@@ -20,6 +20,7 @@
 
 	.icon {
 		fill: $charcoal;
+		vertical-align: text-top;
 	}
 
 	&.alert-success {
